# keride

./: Cargo.toml  Makefile  README.md
.github/workflows/: test.yml
sample/keri/: labels.rs  mod.rs  parsing.rs  verification.rs
sample/keri/acdc/: endorsement.rs  event.rs  message.rs  mod.rs  schemer.rs  verification.rs
sample/keri/acdc/tel/: management.rs  mod.rs  vc.rs  verification.rs
sample/keri/kmi/: endorsement.rs  event.rs  message.rs  mod.rs  verification.rs
src/: data.rs  keeping.rs  lib.rs  messaging.rs  receipting.rs  seal.rs
src/cesr/: README.md  bexter.rs  cigar.rs  common.rs  creder.rs  data.rs  dater.rs  diger.rs  error.rs  mod.rs  number.rs  sadder.rs  saider.rs  salter.rs  seqner.rs  serder.rs  siger.rs  tholder.rs  util.rs  verfer.rs
src/cesr/core/: bexter.rs  cigar.rs  common.rs  creder.rs  dater.rs  diger.rs  mod.rs  number.rs  sadder.rs  saider.rs  salter.rs  seqner.rs  serder.rs  siger.rs  tholder.rs  util.rs  verfer.rs
src/cesr/core/counter/: mod.rs  tables.rs
src/cesr/core/indexer/: mod.rs  tables.rs
src/cesr/core/matter/: mod.rs  tables.rs
src/cesr/counter/: mod.rs  tables.rs
src/cesr/crypto/: hash.rs  salt.rs  sign.rs
src/cesr/indexer/: mod.rs  tables.rs
src/cesr/matter/: mod.rs  tables.rs
src/crypto/: hash.rs  salt.rs  sign.rs
src/pathing/: mod.rs  pather.rs
src/prefexing/: mod.rs  prefixer.rs
src/signify/: creating.rs  keeping.rs  mod.rs
src/signing/: README.md  mod.rs  signer.rs
