[package]
name = "keride"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cesr", "signing", "prefixing", "pathing", "parsing"]
cesr = []
signing = ["cesr"]
prefixing = ["cesr"]
pathing = ["cesr"]
parsing = ["cesr"]

[dependencies]
anyhow = "~1"
argon2 = "~0.5"
base64 = "~0.21"
blake2 = "~0.10"
blake3 = "~1"
chrono = { version = "~0.4", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2.0.0-rc.2", features = ["rand_core"] }
indexmap = "~1"
k256 = "~0.13"
lazy_static = "~1"
num-rational = "~0.4"
p256 = "~0.13"
rand_core = "~0.6"
regex = "~1"
serde_json = { version = "~1", features = ["preserve_order"] }
sha2 = "~0.10"
sha3 = "~0.10"
thiserror = "~1"
zeroize = { version = "~1", features = ["derive"] }

[dev-dependencies]
hex-literal = "0.4.0"
hex = "0.4.3"
rstest = "0.17.0"
